2007-09-30  Dan Williams  <dcbw@redhat.com>

	* src/password-dialog.c
		- Fix spacing
		- (nma_wpa_passphrase_to_hex): handle SSIDs with NULL bytes, indicate
			errors
		- (response_cb): handle errors hashing passphrase

2007-09-28  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (vpn_connection_state_changed): clean up, get rid of unused code
		- (nma_menu_vpn_item_clicked): consolidate new VPN connection code
		- (foo_client_state_change): blow away list of active VPN connections
			when NM goes away
		- (foo_add_initial_vpn_connections, foo_set_initial_state): get initial
			state of VPN connections on start too

2007-09-28  Jeremy Katz  <katzj@redhat.com>

	* src/password-dialog.c (response_cb): Fix where cancel'ing the
	password dialog would leave you unable to bring it back up (rh#311541)

	* src/applet.c (foo_client_setup): Don't show the status icon if
	NM isn't running

	* src/password-dialog.c 
	        - (update_button_cb, response_cb,
	        nma_wpa_passphrase_to_hex): Support WPA passphrases based
	        on 0.6.5 bits.
	* src/sha1.c, src/sha1.h, src/Makefile.am: Add sha1 code from 0.6.5

2007-09-28  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_vpn_item_clicked, nma_menu_disconnect_vpn_item_activate,
		   nma_menu_add_vpn_submenu): for now, preserve old behavior of only
			one active VPN connection at a time.  Will be fixed later.

2007-09-27  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (get_secrets, applet_dbus_connection_settings_get_secrets): correctly
			handle VPN secrets too

2007-09-26  Dan Williams  <dcbw@redhat.com>

	* src/vpn-password-dialog.c
	  src/vpn-password-dialog.h
	  src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): call out to the VPN
			password dialog helper bits

2007-09-25  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
		- (wired_menu_item_new): Dim wired items based on carrier state

2007-09-25  Dan Williams  <dcbw@redhat.com>
